<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Power Strip</string>

    <!-- General -->
    <string name="fail">Fail</string>
    <string name="name">Name</string>
    <string name="component">Component</string>
    <string name="Pin">Pin</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
	<string name="action_stop_all">Stop all</string>
	<string name="action_stop">Stop plug</string>
	<string name="action_overflow">Overflow</string>

    <!-- Settings -->
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_url_api">URL Api</string>
    <string name="pref_url_api_summary">The api url. Ej: http://..... </string>
    <string name="pref_user">User name</string>
    <string name="pref_user_summary">The user name, necessary for Api connection.</string>
    <string name="pref_password">Password</string>
    <string name="pref_password_summary">The user password, necessary for api connection</string>

    <!-- Login Activity -->
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_urlApi">URL API</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_password">The password is not correct.</string>
    <string name="error_invalid_username">The username is not valid</string>
    <string name="error_invalid_url">The URL is not valid.</string>
    <string name="error_incorrect_data">Data is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="prompt_savePass">Save password</string>
    <string name="action_quit">Quit</string>
    <string name="action_logout">Logout</string>

    <!-- Dates activity-->
    <string name="prompt_select">Select</string>
    <string name="prompt_selectDate">Select Date</string>
    <string name="tab_date">Date</string>
    <string name="tab_time">Time</string>
    <string name="action_dates">Dates</string>
    <string name="prompt_initDate">Fecha encendido</string>
    <string name="prompt_endDate">Fecha parado</string>
    <string name="prompt_initTime">Hora encendido</string>
    <string name="prompt_endTime">Hora apagado</string>
    <string name="plug">Plug</string>
    <string name="send">Send</string>
    <string name="dualion">Dualion</string>
    <string name="wrong_date">Wrong date</string>
    <string name="plugs">plugs</string>
    <string name="diario">Diario</string>
	<string name="semanal">Semanal</string>
    <string name="Lun">L</string>
    <string name="Mar">M</string>
    <string name="Mir">X</string>
    <string name="Jue">J</string>
    <string name="Vie">V</string>
    <string name="Sab">S</string>
    <string name="Dom">D</string>

	<!-- Main activity -->
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="are_sure">Are you sure?</string>
	<string name="inactivo">Inactivo</string>
	<string name="activo">Activo</string>
	<string name="frequency">Repetición</string>
	<string name="freq">Rep</string>
	<string name="diaria">Diaria</string>
	<string name="unica">Única</string>
	<string name="dia">Dia</string>

</resources>
