<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.dualion.power_strip.view.PlugsActivity" >

	<!-- Stop -->
	<item
		android:id="@+id/action_stop"
		android:icon="@drawable/ic_action_shutdown"
		android:orderInCategory="50"
		android:showAsAction="always"
		android:title="@string/action_stop_all"/>

	<!-- Refresh -->
	<item
		android:id="@+id/action_refresh"
		android:icon="@drawable/ic_action_refresh"
		android:orderInCategory="100"
		android:showAsAction="always"
		android:title="@string/action_refresh" />

	<item
		android:id="@+id/empty"
		android:icon="@drawable/ic_action_overflow"
		android:orderInCategory="100"
		android:showAsAction="always"
		android:title="@string/action_overflow">

		<menu>
			<item
				android:id="@+id/action_settings"
				android:icon="@drawable/ic_action_settings"
				android:showAsAction="always|withText"
				android:title="@string/action_settings"/>

			<item
				android:id="@+id/action_logout"
				android:showAsAction="always|withText"
				android:title="@string/action_logout"/>

			<item
				android:id="@+id/action_quit"
				android:showAsAction="always|withText"
				android:title="@string/action_quit"/>
		</menu>
	</item>

</menu>