<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".MainActivity">

	<!-- Stop -->
	<item
		android:id="@+id/action_stop"
		app:showAsAction="always"
		android:icon="@drawable/ic_action_shutdown"
		android:title="@string/action_stop"/>

	<!-- Refresh -->
	<item
		android:id="@+id/action_refresh"
		app:showAsAction="never"
		android:icon="@drawable/ic_action_refresh"

		android:title="@string/action_refresh"/>

	<item
		android:id="@+id/action_settings"
		app:showAsAction="never"
		android:icon="@drawable/ic_action_settings"
		android:title="@string/action_settings" />

	<item
		android:id="@+id/action_logout"
		app:showAsAction="never"
		android:title="@string/action_logout" />

	<item
		android:id="@+id/action_quit"
		app:showAsAction="never"
		android:title="@string/action_quit" />

</menu>
