<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
	android:background="@drawable/dualiontheme_list_selector_holo_light" >

    <!-- Pin id (pid) - will be HIDDEN - used to pass to other activity -->
    <TextView
        android:id="@+id/pid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />


	<LinearLayout
		android:id="@+id/Title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_toLeftOf="@+id/thumbnail"
		android:layout_toStartOf="@+id/thumbnail"
		android:layout_marginTop="3dp" >

		<TextView
			android:id="@+id/name"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:textSize="@dimen/title"
			android:textStyle="bold"
			android:layout_weight="1"
			android:text="@string/plugs"/>

		<TextView
			android:id="@+id/component"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="3"
			android:textSize="@dimen/component"
			android:text="@string/component" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/details"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/Title"
		android:layout_toLeftOf="@+id/thumbnail"
		android:layout_toStartOf="@+id/thumbnail"
		android:layout_marginTop="3dp"
		android:orientation="vertical">

		<TextView
			android:id="@+id/state"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/pin"
			android:textSize="@dimen/description"
			android:text="@string/Pin" />

		<TextView
			android:id="@+id/frequency"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/pin"
			android:textSize="@dimen/description"
			android:layout_marginTop="3dp"
			android:text="@string/frequency" />

	</LinearLayout>


	<!-- Img -->
	<ImageView
		android:id="@+id/thumbnail"
		android:layout_width="64dp"
		android:layout_height="64dp"
		android:contentDescription="@string/fail"
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:clickable="true" />

</RelativeLayout>