<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".LoginActivity" >

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!-- Info login -->
    <ScrollView android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logo"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/logotipo_dualion"
                android:contentDescription="@string/Dualion" />

            <EditText
                android:id="@+id/urlApi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_urlApi"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textUri"
                android:background="@drawable/edittext_top_bg"
                android:padding="10dp"
                android:textColorHint="#bbbbbb"
                android:drawableLeft="@drawable/ic_action_web_site" />

            <AutoCompleteTextView
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_user"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/edittext_default_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:textColorHint="#bbbbbb"
                android:drawableLeft="@drawable/ic_action_person"/>

            <EditText android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/edittext_bottom_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:textColorHint="#bbbbbb"
                android:password="true"
                android:drawableLeft="@drawable/ic_action_secure"/>

            <CheckBox
                android:id="@+id/savePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_savePass" />

            <Button
	            android:id="@+id/user_sign_in_button"
	            style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>



